# zyte-common-items

./: .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  MANIFEST.in  README.rst  conftest.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  contributing.rst  index.rst  requirements.txt  setup.rst  usage.rst
docs/reference/: adapter.rst  components.rst  converters.rst  extractors.rst  field-processors.rst  index.rst  items.rst  page-objects.rst  pages.rst  pipelines.rst  scrapy.rst
docs/usage/: field-processors.rst  items.rst  page-objects.rst  pages.rst  processors.rst  request-templates.rst
pre-commit-scripts/: no_colon_comments.py
tests/: __init__.py  test_adapter.py  test_ae_pipeline.py  test_annotations.py  test_auto_field_stats.py  test_components.py  test_components_request.py  test_conversion.py  test_dateutils.py  test_docs.py  test_examples.py  test_extractors.py  test_items.py  test_items_base.py  test_items_zyte_data_api.py  test_metadata.py  test_mypy.py  test_page_objects.py  test_pages.py  test_pages_auto.py  test_pages_description.py  test_pages_price.py  test_pipeline_for_warning.py  test_pipelines.py  test_processors.py  test_request_templates.py  test_requests.py  test_util.py  typing.py
tests/fixtures/: sample_article.json  sample_article_list.json  sample_comments.json  sample_forum_post_list.json  sample_job_posting.json  sample_product.json  sample_product_list.json  sample_real_estate.json  sample_review_list.json  sample_vehicle.json
zyte_common_items/: __init__.py  _addon.py  _dateutils.py  _examples.py  _scrapy_poet.py  adapter.py  ae.py  base.py  common_fields.py  components.py  converters.py  extractors.py  fields.py  items.py  log_formatters.py  page_objects.py  pages.py  pipelines.py  processors.py  unified_schema.py  util.py  zyte_data_api.py
zyte_common_items/components/: __init__.py  _compat.py  additional_property.py  address.py  author.py  brand.py  breadcrumbs.py  business_place.py  custom_attributes.py  forum_thread.py  gtin.py  job_posting.py  links.py  media.py  metadata.py  ratings.py  real_estate.py  request.py  serp.py  social_media_post.py
zyte_common_items/items/: __init__.py  _compat.py  article.py  article_list.py  article_navigation.py  business_place.py  custom_attributes.py  forum_thread.py  job_posting.py  job_posting_navigation.py  product.py  product_list.py  product_navigation.py  real_estate.py  search_request_template.py  serp.py  social_media_post.py
zyte_common_items/pages/: __init__.py  article.py  article_list.py  article_navigation.py  base.py  business_place.py  forum_thread.py  job_posting.py  job_posting_navigation.py  mixins.py  product.py  product_list.py  product_navigation.py  real_estate.py  search_request_template.py  serp.py  social_media_post.py
